# chatbot_webSockets

./: README.md  db.sqlite3  manage.py  pyproject.toml
ChatBot/: asgi.py  settings.py  urls.py
